// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - FeedbackButton Expect to match snapshot 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-q0ckor-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`common - FeedbackButton Expect to match snapshot with arrayed sx 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-oghumt-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    test
  </button>
</div>
`;
